--- a/css/ipad.css
+++ b/css/ipad.css
@@ -324,7 +324,7 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 
  .copyright { max-height:80px; background-color:#68a6da;     position: absolute;
     width: 100%;
-     margin-bottom: 0px; }
+     bottom: 0px; }
  .copyright2 { max-height:80px; background-color:#68a6da;     position: absolute;
     width: 100%;
      margin-bottom: 0px; }
