--- a/mobile.css
+++ b/mobile.css
@@ -19,7 +19,7 @@
 #return-to-top {
     position: fixed;
     bottom: 16%;
-    right: 20px;
+    right: 11%;
    
     width: 15%;
     height: 35px;
