--- a/mobile.css
+++ b/mobile.css
@@ -4,6 +4,16 @@
     height: 200px;
     margin: 0 auto; 
     align-content: center;
+    display:none;
+}
+
+.logomobile{
+    display:flex;
+     width: 15%;
+    height: 50px;
+    margin: 0 auto; 
+    align-content: center;
+    margin-bottom: -15%;
 }
 
 .navbar-default {
@@ -282,4 +292,38 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 border-bottom: 4px solid purple;
   padding: 4px 0; 
     
+}
+
+.navbar-static-top {
+    z-index: 1000;
+    width: 100%;
+    margin: 0 auto;
+}
+
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 0px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
+
+.navbar-toggle {
+  position: relative;
+  float: left;
+  padding: 9px 14px;
+  margin-top: 4%;
+  margin-left: 5%;
+  margin-bottom: 5%;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.navbar {
+    position: relative;
+    min-height: 65px;
+    margin-bottom: 0px;
+    border: 0px solid transparent;
 }
