--- a/bootstrap.css
+++ b/bootstrap.css
@@ -4143,7 +4143,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #ddd;
+  background-color: transparent;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #888;
@@ -6909,7 +6909,7 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
   display: block;
   position: absolute;
   height: 4px;
-  width: 100%;
+  width: 90%;
   background: #4431a4;
   border-radius: 9px;
   opacity: 1;
