--- a/mobile.css
+++ b/mobile.css
@@ -13,7 +13,7 @@
     height: 57px;
     margin: 0 auto; 
     align-content: center;
-    margin-bottom: -17%;
+    margin-top: 20px;
 }
 
 .navbar-default {
@@ -313,7 +313,7 @@ body {
   position: relative;
   float: left;
   padding: 7px 9px;
-  margin-top: 5%;
+  margin-top: -44px;
   margin-left: 5%;
   margin-bottom: 3%;
   background-color: transparent;
@@ -334,5 +334,6 @@ body {
     width: 10%;
     position: absolute;
     margin-left: 86%;
-    margin-top: 2.4%;
+    margin-top: 25px;
 }
+
