--- a/mobile.css
+++ b/mobile.css
@@ -331,8 +331,8 @@ body {
 
 .navbar-brand {
     float: left;
-    height: 10px;
-    padding: 15px 15px;
+    max-height: 10px;
+    padding: 6px 15px;
     font-size: 18px;
     line-height: 20px;
 }
