--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6817,7 +6817,7 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 .footer-col p i { width:20px; color:#999;}
 
 .footer-ul { list-style-type:none;  padding-left:0; margin-left:2px;}
-.footer-ul li { line-height:29px; font-size:12px;}
+.footer-ul li { line-height:29px; font-size:12px; display:none;}
 .footer-ul li a { color:#a0a3a4; transition: color 0.2s linear 0s, background 0.2s linear 0s; }
 .footer-ul i { margin-right:10px;}
 .footer-ul li a:hover {transition: color 0.2s linear 0s, background 0.2s linear 0s; color:#ff670f; }
@@ -6825,7 +6825,7 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
  .copyright { min-height:40px; background-color:#68a6da; position:absolute; width:100%}
  .copyright p { text-align:left; color:#FFF; padding:10px 0; margin-bottom:0;}
  .heading7 { font-size:21px; font-weight:700; color:#d9d6d6; margin-bottom:22px; display:none;}
- .post p { font-size:12px; color:#FFF; line-height:20px;}
+ .post p { font-size:12px; color:#FFF; line-height:20px; display:none;}
  .post p span { display:block; color:#8f8f8f; display:none;}
  .bottom_ul { list-style-type:none; float:right; margin-bottom:0;display:none;}
  .bottom_ul li { float:left; line-height:40px;}
