--- a/landscape.css
+++ b/landscape.css
@@ -245,7 +245,22 @@ margin: 20px 33px 20px 20px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}  
+
+.bg-img3 {
+    /* The image used */
+    background-image: url("../Sync-Development/images/Laptop.jpg");
+
+    /* Set a specific height */
+    min-height: 400px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }    
+
     
 
 #kolom-1 {
@@ -272,3 +287,8 @@ margin: 20px 33px 20px 20px;
         background-attachment: scroll;
     }
 } 
+
+.container-2 {
+      background-color: ;
+  background: rgba(0,0,128, 0.1);
+}
