--- a/landscape.css
+++ b/landscape.css
@@ -249,7 +249,7 @@ margin: 20px 33px 20px 20px;
 
 .bg-img3 {
     /* The image used */
-    background-image: url("../Sync-Development/images/Laptop.jpg");
+    background-image: url("../images/Laptop.jpg");
 
     /* Set a specific height */
     min-height: 400px; 
