--- a/css/Ipad-landscape.css
+++ b/css/Ipad-landscape.css
@@ -61,6 +61,16 @@
   background-color: deepskyblue;
 }
 
+.lightbox img {
+    max-width: 80%;
+    max-height: 90%;
+    text-align: center;
+    margin-top: 2%;
+    border: 8px solid #4431a4;
+}
+
+
+
 iframe{
  max-width: 80%;
 height: 200px;
@@ -136,7 +146,7 @@ margin: 20px 20px 20px 20px;
   max-width: 80%;
   max-height: 90%;
   text-align: center;
-  margin-top: 50%;
+  margin-top: 3%;
   border: 8px solid #4431a4;
 }
 
@@ -184,7 +194,7 @@ margin: 20px 20px 20px 20px;
   /**styling the right arrow**/
   
   position: fixed;
-  right: 10%;
+  right: 6%;
   top: 40%;
   width: 40px;
   font-size: 40px;
