--- a/mobile.css
+++ b/mobile.css
@@ -233,7 +233,7 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 
  .copyright { max-height:80px; background-color:#68a6da;     position: absolute;
     width: 100%;
-    margin-bottom: 0px;}
+    margin-bottom: 0px;     overflow: hidden;}
 .copyright3 { max-height:80px; background-color:#68a6da;     position: absolute;
     width: 100%;
     margin-bottom: 0px; }
@@ -372,3 +372,7 @@ body {
     margin-top: 46%;
 }    
 
+html,body
+{
+min-height:100%;
+}
