--- a/css/Ipad-landscape.css
+++ b/css/Ipad-landscape.css
@@ -1,13 +1,14 @@
 
+
 .logo{
-    width: 100%;
-    height: 200px;
-    margin: 0 auto; 
-    align-content: center;
+        width: 29%;
+    height: 19%;
+    margin-left: -6%;
+    margin-bottom: -9%;
 }
 
 .navbar-default {
-    background-color: #f8f8f8;
+    background-color: white;
     border-color: #e7e7e7;
 }
 
@@ -207,4 +208,9 @@ margin: 20px 20px 20px 20px;
 
 .socialmedia{
     display:flex;
+}
+
+.flag{
+        margin-left: -36%;
+    margin-right: 29%;
 }
