--- a/css/ipad.css
+++ b/css/ipad.css
@@ -1,4 +1,10 @@
 
+.logo{
+        width: 29%;
+    height: 19%;
+    margin-left: -6%;
+    margin-bottom: -9%;
+}
 
 
 .navbar-default {
@@ -309,7 +315,7 @@ margin: 20px 33px 20px 20px;
     display:flex;
 }
 
-footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', sans-serif;  display:none;  }
+footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', sans-serif;   }
 .footer-col { margin-top:13px; }
 .logofooter { margin-bottom:10px; font-size:25px; color:#fff; font-weight:700; display:none; }
 
@@ -324,7 +330,7 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 
  .copyright { max-height:80px; background-color:#68a6da;     position: absolute;
     width: 100%;
-     bottom: 0px; }
+     margin-bottom: 0px; overflow:hidden; }
  .copyright2 { max-height:80px; background-color:#68a6da;     position: absolute;
     width: 100%;
      margin-bottom: 0px; }
@@ -350,9 +356,7 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 .footer-social1{
     display:flex;
 }
-.footer-social{
-    display:none;
-}
+
  .footer-social li{
      float:left;
  }
@@ -397,4 +401,9 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 border-bottom: 4px solid purple;
   padding: 4px 0; 
     
+}
+
+.flag{
+        margin-left: -36%;
+    margin-right: 29%;
 }
