--- a/mobile.css
+++ b/mobile.css
@@ -313,13 +313,32 @@ body {
   position: relative;
   float: left;
   padding: 7px 9px;
-  margin-top: -44px;
+  margin-top: -54px;
   margin-left: 5%;
   margin-bottom: 3%;
   background-color: transparent;
   background-image: none;
   border: 0px solid transparent;
-  border-radius: 4px;
+  border-radius: 0px;
+}
+#nav-icon1 span, #nav-icon3 span, #nav-icon4 span {
+    display: block;
+    position: absolute;
+    height: 4px;
+    width: 90%;
+    background: #4431a4;
+    border-radius: 10px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: -0.75s ease-in-out;
+    transition: .25s ease-in-out;
+    margin-top: -92%;
 }
 
 .navbar {
