--- a/bootstrap.css
+++ b/bootstrap.css
@@ -7164,4 +7164,5 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 
 #button-1 {
     margin: 0 auto;
+        margin-left: -3%;
 }
