--- a/css/ipad.css
+++ b/css/ipad.css
@@ -282,13 +282,11 @@ margin: 20px 33px 20px 20px;
 }
 
 .lightbox img {
-  /**sets the styling of the image in the lightbox**/
-  
-  min-width: 100%;
-  max-height: 90%;
-  text-align: center;
-  margin-top: 32%;
-  border: 8px solid #4431a4;
+    min-width: 93%;
+    min-height: 49%;
+    text-align: center;
+    margin-top: 32%;
+    border: 8px solid #4431a4;
 }
 
 .lightbox img:hover {
